# github-action-test

./: .releaserc  package-lock.json  pyproject.toml  release.config.js
.github/workflows/: actions.yml  ci.yml  main.yml  semantic-release.yml
src/: check_black.py  demo.py
