[tool.poetry]
name = "gfg-data"
version = "0.1.0"
description = ""
authors = ["Hoang Phan <hoang.phan@global-fashion-group.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
apache-airflow = {extras = ["aws"], version = "^2.0.0"}
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
mypy = "^0.800"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
